k8s-manifests/catalog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-deployment
  labels:
    app: catalog
    version: blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog
      version: blue
  template:
    metadata:
      labels:
        app: catalog
        version: blue
    spec:
      containers:
      - name: catalog-container
        image: booksstoreregistry.azurecr.io/catalogservice:v1  # placeholder tag; will be updated via CI/CD
        ports:
        - containerPort: 3001
