k8s-manifests/cart-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cartservice
spec:
  selector:
    app: cart
  ports:
    - port: 3002
      targetPort: 3002
  type: ClusterIP
