k8s-manifests/catalog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalogservice
spec:
  selector:
    app: catalog
    version: blue
  ports:
    - port: 3001
      targetPort: 3001
  type: ClusterIP
